--- a/portfolio/src/assets/scss/main.scss
+++ b/portfolio/src/assets/scss/main.scss
@@ -1,7 +1,8 @@
 
+@import '@/assets/scss/mixin';
 
 body {
- font-family: "Century Gothic", 'Lato', sans-serif;
+    font-family: "Century Gothic", 'Lato', sans-serif; 
 }
 
 a {
@@ -17,9 +18,9 @@ a {
     min-height: 100vh;
     height: fit-content;
     position: relative;
-    background: #eee;
+    background: $background-color;
     text-align: center;
-    padding: 0 2em;
+    padding: 80px 2em 0px 2em;
     h1 {
         font-size: 2rem;
         margin: 0;
@@ -58,9 +59,9 @@ a {
         transition: all 0.5s ease;
         font-size: 0.8rem;
     &:hover {
-            color:white;
-    background: rgba(102,177,241,0.8);
-            transition: all 0.5s ease;
+        color:white;
+        background: $main-color;
+        transition: all 0.5s ease;
     }
 }
 
@@ -69,7 +70,7 @@ a {
     bottom: 0;
     width: 0;
     height: 6px;
-    background: #66B1F1;
+    background: $main-color;
     transition: left 0.3s ease;
 }
 
