--- a/portfolio/src/assets/scss/main.scss
+++ b/portfolio/src/assets/scss/main.scss
@@ -88,3 +88,63 @@ a {
         font-size: 1rem;
     }
 }
+
+.down-arrow {
+    padding-top: 80px;
+    span {
+        position: absolute;
+        left: 50%;
+        width: 24px;
+        height: 24px;
+        margin-left: -12px;
+        border-left: 1px solid #000000;
+        border-bottom: 1px solid #000000;
+        -webkit-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+        -webkit-animation: sdb 2s infinite;
+        animation: sdb 2s infinite;
+        opacity: 0;
+        box-sizing: border-box;
+    }
+    span:nth-of-type(1) {
+        -webkit-animation-delay: 0s;
+        animation-delay: 0s;
+    }
+    span:nth-of-type(2) {
+        margin-top: 16px;
+        -webkit-animation-delay: .15s;
+        animation-delay: .15s;
+    }
+    span:nth-of-type(3) {
+        margin-top: 32px;
+        -webkit-animation-delay: .3s;
+        animation-delay: .3s;
+    }
+    div {
+        margin-top: 80px;
+        font-size: 15pt;
+    }
+  }
+
+  @-webkit-keyframes sdb {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  @keyframes sdb {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
